--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -2,4 +2,9 @@ awsLambda {
   Bucket = "cs441hw2"
   Key = "LogFileGenerator.2021-10-05.log"
   Pattern = "([a-c][e-g][0-3]|[A-Z][5-9][f-w]){5,15}"
+  Time="16.28.44.771"
+  deltaH="0"
+  deltaM="0"
+  deltaS="1"
+  deltaMs="0"
 }
